swagger/json update
