# static/swagger.json
@@ -12,15 +12,15 @@
   ],
   "paths": {
     "/add_todo/{value}": {
-      "post": {
+      "get": {
         "summary": "Add a new todo",
-        "description": "Adds a new todo with the specified value",
+        "description": "Adds a new todo to the list with the specified description",
         "operationId": "addTodo",
         "parameters": [
           {
             "name": "value",
             "in": "path",
-            "description": "The value of the new todo",
+            "description": "The description of the new todo",
             "required": true,
             "schema": {
               "type": "string"
@@ -29,10 +29,88 @@
         ],
         "responses": {
           "201": {
-            "description": "Todo added successfully"
+            "description": "Todo created successfully"
           },
           "400": {
             "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/delete_todo/{id}": {
+      "get": {
+        "summary": "Delete a todo",
+        "description": "Deletes the todo with the specified ID",
+        "operationId": "deleteTodo",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The ID of the todo to delete",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Todo deleted successfully"
+          },
+          "404": {
+            "description": "Todo not found"
+          }
+        }
+      }
+    },
+    "/add_task/{value}": {
+      "get": {
+        "summary": "Add a new task",
+        "description": "Adds a new task to the list with the specified description",
+        "operationId": "addTask",
+        "parameters": [
+          {
+            "name": "value",
+            "in": "path",
+            "description": "The description of the new task",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Task created successfully"
+          },
+          "400": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/delete_task/{id}": {
+      "get": {
+        "summary": "Delete a task",
+        "description": "Deletes the task with the specified ID",
+        "operationId": "deleteTask",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The ID of the task to delete",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Task deleted successfully"
+          },
+          "404": {
+            "description": "Task not found"
           }
         }
       }
